--- a/src/main/webapp/file-not-found.html
+++ b/src/main/webapp/file-not-found.html
@@ -5,7 +5,7 @@
 <!-- Basic Page Needs
 –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 <meta charset="utf-8">
-<title>Benefit Indiana - Volunteer Matches</title>
+<title>Benefit Indiana - Nonprofit Submission</title>
 <meta name="description" content="">
 <meta name="author" content="">
 
@@ -47,39 +47,24 @@
  </nav>
 
 <!-- HEADER -->  
-<header class="container">
+  <header class="container">
     <div class="row header">
-        <h2>Thank you for your interest in volunteering!</h2>
-        <h6>Please explore your matches and reach out at your convenience.</h6> 
-    </div>   
+    <div class="bigbody">
+        <h2>Whoops!</h2>
+        <h6>The file you are looking for does not exist!</h6>
+        <h6>Please return home.</h6>
+    </div>
+    </div>
  </header>
 </section>
-
+    
 <!-- NONPROFITS SECTION --> 
 <section>
     <div class="container">
-    	<div class="four columns">
-            <p class="title">1. [name1]</p>
-            <p class="title">2. [name2]</p>
-            <p class="title">3. [name3]</p>
-            <p class="title">4. [name4]</p>
-    	</div>
-        <div class="four columns">
-            <p class="info">Category: [activities1] <br>Location: [location1] Indiana</p>
-            <p class="info">Category: [activities2] <br>Location: [location2] Indiana</p>
-            <p class="info">Category: [activities3] <br>Location: [location3] Indiana</p>
-            <p class="info">Category: [activities4] <br>Location: [location4] Indiana</p>
-        </div>
-   	    <div class="four columns">
-            <p class="info">Website: <a class="info2" href="[website1]">[website1]</a> <br>Phone: [phone1]</p>
-            <p class="info">Website: <a class="info2" href="[website2]">[website2]</a> <br>Phone: [phone2]</p>
-            <p class="info">Website: <a class="info2" href="[website3]">[website3]</a> <br>Phone: [phone3]</p>
-            <p class="info">Website: <a class="info2" href="[website4]">[website4]</a> <br>Phone: [phone4]</p>
-        </div> 
     </div>
 </section>
-
-<!-- FOOTER --> 
+    
+<!-- FOOTER -->
 <footer>
     <div class="container">
         <div class="row footer">
@@ -87,6 +72,7 @@
                 <h1>Benefit Indiana</h1>
             </div>
             <h5>Created for TechPoint S.O.S. Challenge</h5>
+        </div>
         </div>
     </div>
 </footer>
