--- a/src/main/webapp/nonprofit-submit-error.html
+++ b/src/main/webapp/nonprofit-submit-error.html
@@ -50,8 +50,10 @@
   <header class="container">
     <div class="row header">
     <div class="bigbody">
-        <h2>Error!</h2>
-        <h6>Your information was NOT submitted successfully.</h6> 
+        <h2>Whoops!</h2>
+        <h6>Your information was NOT submitted successfully.</h6>
+        <h6>Please return home and try again, and make sure to fill in all fields.</h6>
+    </div>
     </div>
  </header>
 </section>
