--- a/src/main/webapp/volunteer-submit-failure.html
+++ b/src/main/webapp/volunteer-submit-failure.html
@@ -51,7 +51,9 @@
     <div class="row header">
     <div class="bigbody">
         <h2>Whoops!</h2>
-        <h6>Your information was NOT submitted successfully.</h6>  
+        <h6>We were not able to process your request.</h6>
+        <h6>Please return home and try again, and make sure to fill in the search fields.</h6>
+    </div>
     </div>
  </header>
 </section>
